build/admissionDeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-webhook
  labels:
    app: admission-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admission-webhook
  template:
    metadata:
      name: admission-webhook
      labels:
        app: admission-webhook
    spec:
      containers:
        - name: admission-webhook
          image: myregistry/admission-webhook:v1
          imagePullPolicy: IfNotPresent
          command: ["/root/admission-webhook"]
          args:
            - "--tls-cert-file=/root/tls.crt"
            - "--tls-private-key=/root/tls.key"
          volumeMounts:
            - mountPath: "/certs"
              name: admission-tls
              readOnly: true
      volumes:
        - name: admission-tls
          secret:
            secretName: admission-secret
