build/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    role: test
    namespace: default
spec:
  containers:
    - name: test-pod
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - name: test-pod
          containerPort: 80
          protocol: TCP
  restartPolicy: Always
