build/admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: admission-webhook
webhooks:
  - name: admission-webhook.default.svc
    admissionReviewVersions: ["v1"]
    clientConfig:
      service:
        name: admission-webhook
        namespace: default
        path: "/validate"
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZMRENDQXhTZ0F3SUJBZ0lKQU9nZERZZW1PWGFnTUEwR0NTcUdTSWIzRFFFQkN3VUFNQ2d4SmpBa0JnTlYKQkFNTUhXRmtiV2x6YzJsdmJpMTNaV0pvYjI5ckxtUmxabUYxYkhRdWMzWmpNQjRYRFRJMU1ESXdNVEUyTWpndwpNMW9YRFRJMk1ESXdNVEUyTWpnd00xb3dLREVtTUNRR0ExVUVBd3dkWVdSdGFYTnphVzl1TFhkbFltaHZiMnN1ClpHVm1ZWFZzZEM1emRtTXdnZ0lpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElDRHdBd2dnSUtBb0lDQVFERUNKYlMKVjQ0bjBtQmlFWng2Qzg1SWdJWHNrVnNvSkNycHN4VkNoSHhVNWRvV3pjd1lXS2R6cGZ6cThIRmt3aWFBaUZpYwpXNmkxTDJ3SEFR [...]
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
    sideEffects: None
    timeoutSeconds: 3
